# directory-issues

./: .gitignore  pyproject.toml
directory_issues/scrapers/: lni_scraper.py  thepaperboy_scraper.py
directory_issues/scrapers/utils/: database.py  scraper.py
notebooks/: compare_directory_with_lni.ipynb  compare_directory_with_thepaperboy.ipynb
