[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "directory_issues"
version="v0.1b"
dependencies = [
  "Jinja2==3.1.2",
  "pydantic_settings==2.6.0",
  "zammad_py==3.0.0",
  "mediacloud==4.3.0",
  "mediacloud-metadata ~= 1.2.0",
  "pandas==2.2.3",
  "lxml==5.1.1",
  "beautifulsoup4==4.12.3"
]

requires-python = ">=3.10"
authors = [
  {name = "Paige Gulley", email = "pgulley@mediacloud.org"}
]

description = "A module for centralizing issue detection and reporting logic for entries in the mediacloud archive directory"
readme = "README.md"
